      forwarding a message.
[mms] Cache results of address parsing.
[mms] Don't send server requests when autocompleting addresses when possible.
[mms] Added readonly mailbox and disable compose hooks.
[mms] Saving draft on session expiration now handled via VFS.
[mms] Add preference to delete draft on resume & send.


----------
v4.3.6-cvs
----------

[mms] When replying to list, correctly extract e-mail address if multiple
      entries exist in the List-Post header (Bug #8719).
[mms] For messages marked as innocent but not moved to Inbox, don't report
      them as deleted within the current mailbox (Bug #8221).
[jan] Don't show address book preference group if address books are disabled
      (Bug #8692).
[mms] Save References/In-Reply-To header info when saving a draft (Bug #8661).
[jan] Fix viewing S/MIME encrypted and signed messages from Outlook (Express)
      (Bug #8629).
[jan] Add Oracle-specific SQL script.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>,
      Iva Rumora <iva.rumora@zg.t-com.hr>).
[mms] Don't use translated folder prefixes in rename dialog (Bug #8554).
[jan] Add hook to retrieve public S/MIME and PGP keys.


------
v4.3.5
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Add example hook for the search_sources preference (dom.lalot@gmail.com,
      Request #7796).
[mms] Fix renaming shared folders contained in empty namespaces (Bug #8468).
[mms] Correctly handle NO untagged responses on login (Bug #8478).
[mms] Correctly set charset of Bcc header in sent mail (Bug #8362).
[mms] Fix spellcheck in text-mode for certain words in non-English locales
      (Bug #8330).
[mms] Fix some javascript if using IE 8 (uses IE 7 compatibility mode) (Bug
      #8345).
[jan] Allow to lock default_encrypt preference.
[mjr] Add example hook for the add_source preference (Bug #8285).
[mms] Fix unqualified domain preference (Bug #8272).
[jan] Highlight signed messages depending on the signature verification.